--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div class="menu-navigasi">
+            <ul class="link-navigasi">
+                <input type="image" class="galery" src="assets/code.png">
+                <li><a href="https://www.instagram.com/m.akhdaan__">Instagram</a></li>
+                <li><a href="#">WhatsApp</a></li>
+                <li><a href="https://discord.com/users/@nevertheless____">Discord</a></li>
+                <li><a href="#">Github</a></li>
+            </ul>
+        </div>
+
         <div class="container">
             <img src="assets/Muhammad Akhdaan.jpeg" alt="Muhammad Akhdaan" class="rounded-image"/>
-            <p class="nama">I'm Muhammad Akhdaan</p>
+            <p class="nama">I'm Muhammad Akhdaan</p>            
             <p class="deskripsi">Saya adalah seorang web developer pemula yang bersemangat <span> untuk menciptakan pengalaman pengguna yang memukau dan meningkatkan kemampuan teknis saya dalam mengembangkan aplikasi web yang efektif dan efisien.</span></p>
         </div>
         
-        
+        <div class="fotoProgram">
+            <img src="" alt="" class="set-image-program"/>
+        </div>
 
     </body>
 </html>
