about me belum relative, kurang icon bahasa pemrograman. kerapian masih kurang pol

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Akhdaan Portofolio</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <div class="menu-navigasi">
@@ -21,9 +21,29 @@
             <p class="deskripsi">Saya adalah seorang web developer pemula yang bersemangat <span> untuk menciptakan pengalaman pengguna yang memukau dan meningkatkan kemampuan teknis saya dalam mengembangkan aplikasi web yang efektif dan efisien.</span></p>
         </div>
         
-        <div class="fotoProgram">
-            <img src="" alt="" class="set-image-program"/>
+        <div class="about-me">
+            <h1>About Me —</h1>
+            <p> Perkenalkan, saya Muhammad Akhdaan, seorang mahasiswa yang sedang menempuh pendidikan di Universitas Amikom Yogyakarta. Saya lahir dan tinggal di Klaten, Jawa Tengah, dan memiliki latar belakang pendidikan yang kuat.
+                Saya menyelesaikan pendidikan dasar di SDN 3 Klaten, kemudian melanjutkan ke SMPN 5 Klaten untuk menyelesaikan pendidikan menengah pertama. Setelah itu, saya melanjutkan ke SMKN 1 Klaten untuk menyelesaikan pendidikan menengah kejuruan.
+                Saat ini, saya sedang menempuh pendidikan di Universitas Amikom Yogyakarta, salah satu universitas terbaik di Yogyakarta. Saya sangat bersemangat untuk menyelesaikan pendidikan saya dan menjadi seorang profesional yang sukses.
+                Di luar kegiatan akademik, saya memiliki hobi berenang yang sangat saya nikmati. Berenang tidak hanya membuat saya sehat secara fisik, tetapi juga memberikan saya kesempatan untuk menenangkan pikiran dan meningkatkan konsentrasi.
+                Saya berharap dapat menjadi seorang yang sukses dan dapat memberikan kontribusi positif kepada masyarakat. Terima kasih atas perkenalan ini, dan saya berharap dapat berbagi pengalaman dan pengetahuan dengan Anda.</p>
+                <br>
+            <h1 class="visi-misi">— Visi dan Misi </h1>
+            <div class="v-m">
+                    "Menjadi seorang profesional yang berintegritas, inovatif, dan berdedikasi untuk mencapai kesuksesan dalam karir dan memberikan kontribusi positif kepada masyarakat."</p>
+                    "Mengembangkan kemampuan dan pengetahuan untuk mencapai tujuan karir yang lebih tinggi, membangun jaringan profesional yang kuat, dan memberikan kontribusi kepada masyarakat melalui pekerjaan yang berkualitas."</p>
+            </div>
+            <br>
+            <h1 class="bahasa-pemrograman">— What i've Learned —</h1>
+            <video src="assets/videobg.mp4" class="video-code" autoplay>
+            <div class="opacity-hitam"></div>
         </div>
+
+        <audio hidden autoplay loop>
+            <source src="audio/Post Malone_ Swae Lee - Sunflower (Spider-Man_ Int(MP3_128K).mp3" type="audio/mpeg">
+            Browsermu ga ndukung cik
+          </audio>
 
     </body>
 </html>
