all done, kurang tambah fitur highlight project

--- a/index.html
+++ b/index.html
@@ -5,22 +5,27 @@
         <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
+
+        <!-- Menu Navigasi -->
         <div class="menu-navigasi">
             <input type="image" class="galery" src="assets/code.png">
             <ul class="link-navigasi">
                 <li><a href="https://www.instagram.com/m.akhdaan__">Instagram</a></li>
                 <li><a href="#">WhatsApp</a></li>
                 <li><a href="https://discord.com/users/@nevertheless____">Discord</a></li>
-                <li><a href="#">Github</a></li>
+                <li><a href="https://github.com/AkhdaanLogics">Github</a></li>
             </ul>
         </div>
 
+        <!-- Foto & Deskripsi Singkat -->
         <div class="container">
             <img src="assets/Muhammad Akhdaan.jpeg" alt="Muhammad Akhdaan" class="rounded-image"/>
             <p class="nama">I'm Muhammad Akhdaan</p>            
             <p class="deskripsi">Saya adalah seorang web developer pemula yang bersemangat <span> untuk menciptakan pengalaman pengguna yang memukau dan meningkatkan kemampuan teknis saya dalam mengembangkan aplikasi web yang efektif dan efisien.</span></p>
         </div>
         
+
+        <!-- Deskripsi Profile -->
         <div class="about-me">
             <h1>About Me —</h1>
             <p> Perkenalkan, saya Muhammad Akhdaan, seorang mahasiswa yang sedang menempuh pendidikan di Universitas Amikom Yogyakarta. Saya lahir dan tinggal di Klaten, Jawa Tengah, dan memiliki latar belakang pendidikan yang kuat.
@@ -35,15 +40,29 @@
                     "Mengembangkan kemampuan dan pengetahuan untuk mencapai tujuan karir yang lebih tinggi, membangun jaringan profesional yang kuat, dan memberikan kontribusi kepada masyarakat melalui pekerjaan yang berkualitas."</p>
             </div>
             <br>
-            <h1 class="bahasa-pemrograman">— What i've Learned —</h1>
-            <video src="assets/videobg.mp4" class="video-code" autoplay>
-            <div class="opacity-hitam"></div>
-        </div>
+            <br>
 
+            <!-- Logo Bahasa Pemrograman -->
+            <h1 class="bahasa-pemrograman">— What i've been Learning —</h1>
+            <br>
+            <div class="img-code">
+                <img src="assets/C++ (CPlusPlus).png" width="100%">
+                <img src="assets/CSharp (CSharp).png" width="100%">
+                <img src="assets/Java.png" width="100%">
+                <img src="assets/Python.png" width="100%">
+                <img src="assets/Firebase.png" width="100%">
+                <img src="assets/HTML5.png" width="100%">
+                <img src="assets/CSS3.png" width="100%">
+                <img src="assets/JavaScript.png" width="100%">
+                <img src="assets/Tailwind CSS.png" width="100%">
+            </div>
+            <br>
+            <br>
+        
         <audio hidden autoplay loop>
             <source src="audio/Post Malone_ Swae Lee - Sunflower (Spider-Man_ Int(MP3_128K).mp3" type="audio/mpeg">
             Browsermu ga ndukung cik
-          </audio>
+        </audio>
 
     </body>
 </html>
